--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@toolpad/core": "^0.15.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
+    "cloudinary": "^2.7.0",
     "notistack": "^3.0.2",
+    "p-limit": "^6.2.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
