--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "cloudinary": "^2.7.0",
+    "firebase": "^11.9.1",
+    "gapi-script": "^1.2.0",
     "notistack": "^3.0.2",
     "p-limit": "^6.2.0",
     "react": "^19.1.0",
