--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.6",
     "cloudinary": "^2.7.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.20.0",
     "gapi-script": "^1.2.0",
     "notistack": "^3.0.2",
     "p-limit": "^6.2.0",
