--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.1.1",
     "@toolpad/core": "^0.15.0",
+    "antd": "^5.26.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "cloudinary": "^2.7.0",
@@ -26,6 +27,7 @@
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
