--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.1.1",
+    "@react-oauth/google": "^0.12.2",
     "@toolpad/core": "^0.15.0",
     "antd": "^5.26.2",
     "axios": "^1.9.0",
