--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.1.1",
+    "@mui/x-date-pickers": "^8.7.0",
     "@react-oauth/google": "^0.12.2",
     "@toolpad/core": "^0.15.0",
     "antd": "^5.26.2",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "cloudinary": "^2.7.0",
+    "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "framer-motion": "^12.20.0",
     "gapi-script": "^1.2.0",
